
syntax = "proto3";

package intento.intent.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

import "cosmos/base/v1beta1/coin.proto";
import "intento/intent/v1/flow.proto";

option go_package = "github.com/trstlabs/intento/x/intent/types";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = true;

message TrustlessAgent {
  string agent_address = 1;
  ICAConfig ica_config = 2 [ (gogoproto.customname) = "ICAConfig" ];
  TrustlessAgentFeeConfig fee_config = 3;
}

message TrustlessAgentFeeConfig {
  //can set fee coins supported, which can be charged per message executed if a fee limit is set in the flow
  string fee_admin = 1;
  //can be empty
  repeated cosmos.base.v1beta1.Coin fee_coins_supported = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}
